--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="./images/logo.jpg" alt="Foodly.com" width="233" height="33" >
+            <img src="logo.jpg" alt="Foodly.com" width="233" height="33" >
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
@@ -34,17 +34,17 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="./images/img1.jpg" alt="Food Catering">
+                <img src="img1.jpg" alt="Food Catering">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">We provide food catering for all types of events.</p>
             </div>
             <div class="box">
-                <img src="./images/img2.jpg" alt="Bulk Ordering">
+                <img src="img2.jpg" alt="Bulk Ordering">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">We even take bulk orders for events. But the order should be placed 1 day before the event.</p>
             </div>
             <div class="box">
-                <img src="./images/img3.jpg" alt="Food Ordering">
+                <img src="img3.jpg" alt="Food Ordering">
                 <h2 class="h-secondary center">Food Delivery</h2>
                 <p class="center">You can order your favourite food and it will reach to your doorstep.</p>
             </div>
@@ -54,22 +54,22 @@
         <h1 class="h-primary center">Features</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="images/feature1.jpg" alt="Digital Menus">
+                <img src="feature1.jpg" alt="Digital Menus">
                 <h3 class="center">Digital Menus</h3>
             </div>
 
             <div class="client-item">
-                <img src="images/feature2.jpg" alt="Payment Gateway">
+                <img src="feature2.jpg" alt="Payment Gateway">
                 <h3 class="center">Payment Gateway</h3>            
             </div>
           
             <div class="client-item">
-                <img src="images/feature3.jpg" alt="Offers Module">
+                <img src="feature3.jpg" alt="Offers Module">
                 <h3 class="center">Offers Module</h3>  
             </div>
 
             <div class="client-item">
-                <img src="images/feature4.jpg" alt="Loyalty & Feedback">
+                <img src="feature4.jpg" alt="Loyalty & Feedback">
                 <h3 class="center">Loyalty & Feedback</h3> 
             </div>
         </div>
